--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,6 @@
     <string name="title_activity_trail">TrailActivity</string>
     <string name="title_activity_fitness">FitnessActivity</string>
     <string name="title_activity_splasch_actvity">splaschActvity</string>
+    <string name="title_activity_history">HistoryActivity</string>
 
 </resources>
